fix: push 20+ stat card further left to clear image overlap

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -11119,7 +11119,7 @@ form textarea:required:valid {
     right: -40%;
   }
   .hero-09-objects__item.item-02 {
-    left: -40%;
+    left: -60%;
     top: 62%;
   }
   .hero-09-objects__item.item-03 {
@@ -11146,7 +11146,7 @@ form textarea:required:valid {
     right: -40%;
   }
   .hero-09-objects__item.item-02 {
-    left: -40%;
+    left: -60%;
     top: 60%;
   }
   .hero-09-objects__item.item-03 {
